frontend: fix vertical overflow on long strings in message viewer

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -446,6 +446,7 @@ td.ant-table-column-sort {
     padding: 0.1em 0.4em;
     padding-bottom: 0.05em;
     white-space: pre-wrap;
+    line-break: anywhere;
     font-size: 85%;
     font-family: monospace;
 
